--- a/react-dashboard/pages/Page.module.css
+++ b/react-dashboard/pages/Page.module.css
@@ -13,3 +13,13 @@
 .inline {
   margin-left: 4px;
 }
+
+.error {
+  color: red;
+  margin-bottom: 8px;
+}
+
+.success {
+  color: green;
+  margin-bottom: 8px;
+}
